# Genie_Space_Optimizer

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  DEPLOYMENT.md  E2E_TESTING_GUIDE.md  Makefile  QUICKSTART.md  README.md  app.yml  databricks.yml  deploy-config.sh  deploy.sh  destroy.sh  package.json  pyproject.toml  tsconfig.json
.cursor/: mcp.json
.cursor/plans/: align_dag_notebooks_b273ed04.plan.md  auth_flow_rest_api_rework_cb26db0e.plan.md  boost_example_sql_pipeline_21adbfe2.plan.md  dynamic_counterfactual_fixes_da95359d.plan.md  extract-over-generate_validation_78dd9572.plan.md  fix_asi_classification_and_debug_logging_28749aa3.plan.md  fix_benchmark_duplication_f145749a.plan.md  fix_eval_dedup_slots_tvf_36cfae57.plan.md  fix_instruction_slot_budget_cb49519a.plan.md  fix_joins_charts_step-details_d1ccaf71.plan.md  fix_labeling_sessions_29012b3e.plan.md  fix_labeling_sessions_bb479738.plan.md  (+28 more)
.cursor/rules/: backlog-agent.mdc  (+1 more)
browser-test-output/: page-content.txt  results.json
docs/: agent-progress.json  architecture-deep-dive.md  backlog.yml  benchmarkqustions  building-genai-apps-with-mlflow.html  building-genai-apps-with-mlflow.md  genie_space_config.json  genie_space_config_raw.json  gso-cohesion-refactor-prompt.md  gso-upstream-rfc.md  mlflow-genai-feature-map.md  testrun  testrun1.txt  testrun2_annotated.md  testrun3.txt  testrun7_annotated.md  testrun8.txt  testrun9.txt
genie_space_optimizer/: 00-architecture-overview.md  01-delta-state-schema.md  02-optimization-harness.md  03-evaluation-engine.md  04-patch-dsl-and-optimizer.md  05-databricks-app-frontend.md  06-jobs-and-deployment.md  07-configuration-and-constants.md  08-module-map.md  APX-BUILD-GUIDE.md  revenue_property_optimization_2026-02-22.md  revenue_property_optimization_2026-02-23.md
resources/: genie_optimization_job.yml  grant_app_uc_permissions.py  patch_app_yml.py
scripts/: browser-test.mjs  generate_wanderbricks_data.py
tests/: conftest.py
(+246 files in other folders)
